[package]
name = "twiml_derive"
version = "0.0.0"
authors = ["rwxbytes <rwxbytes@proton.me>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
xml = "0.8.20"
