[package]
name = "twiml_derive"
version = "0.1.0"
authors = ["rwxbytes <rwxbytes@proton.me>"]
description = "A proc macro for generating TwiML responses"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1.0"
